# totp-qr-backup

./: .gitignore  README.md  pyproject.toml
demo/: digest.html
totp_qr_backup/: cli.py  qrdigest.py  qrscan.py
