[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totp-qr-backup"
version = "0.0.2"

dependencies = [
    "pyzbar==0.1.9",
    "pillow==10.3.0",
    "pyotp==2.9.0",
    "opencv-python==4.9.0.80",
    "qrcode==7.4.2"
]

[project.scripts]
qr-backup = "totp_qr_backup.cli:main"

[tool.hatch.build.targets.sdist]
only-include = ["totp_qr_backup"]